// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Combobox Generator - Snapshot Tests (Intermediate Data) > should produce consistent intermediate data for all variants (golden path) 1`] = `
{
  "config": {
    "interactionStates": [
      "default",
      "focus",
      "disabled",
    ],
    "openStates": [
      false,
      true,
    ],
    "stateStyles": {
      "default": {
        "ringVariable": "color-border",
      },
      "disabled": {
        "opacity": 0.5,
        "ringVariable": "color-border",
      },
      "focus": {
        "ringVariable": "color-active",
      },
    },
    "variantConfig": {
      "default": {},
      "withError": {
        "errorMessage": "Please select a plan to continue",
        "label": "Subscription Plan",
        "useErrorRing": true,
      },
      "withLabel": {
        "description": "Select your country of residence",
        "label": "Country",
      },
    },
    "variants": [
      "default",
      "withLabel",
      "withError",
    ],
  },
  "dropdownStyles": {
    "parsed": {
      "fillVariable": "color-surface",
      "hasBorder": true,
      "strokeVariable": "color-border",
      "strokeWeight": 1,
    },
    "raw": "bg-surface border border-border",
  },
  "triggerStyles": {
    "parsed": {
      "borderRadius": 8,
      "fillVariable": "color-secondary",
      "hasBorder": true,
      "strokeVariable": "color-border",
    },
    "raw": "bg-secondary ring ring-border rounded-lg",
  },
  "variants": [
    {
      "dropdown": null,
      "hasDescription": false,
      "hasError": false,
      "hasLabel": false,
      "opacity": undefined,
      "open": false,
      "ringVariable": "color-border",
      "state": "default",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "default",
    },
    {
      "dropdown": null,
      "hasDescription": false,
      "hasError": false,
      "hasLabel": false,
      "opacity": undefined,
      "open": false,
      "ringVariable": "color-active",
      "state": "focus",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "default",
    },
    {
      "dropdown": null,
      "hasDescription": false,
      "hasError": false,
      "hasLabel": false,
      "opacity": 0.5,
      "open": false,
      "ringVariable": "color-border",
      "state": "disabled",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "default",
    },
    {
      "dropdown": {
        "borderRadius": 8,
        "height": 120,
        "itemHeight": 32,
        "itemPaddingX": 12,
        "itemPaddingY": 8,
        "paddingY": 4,
        "width": 280,
      },
      "hasDescription": false,
      "hasError": false,
      "hasLabel": false,
      "opacity": undefined,
      "open": true,
      "ringVariable": "color-border",
      "state": "default",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "default",
    },
    {
      "dropdown": {
        "borderRadius": 8,
        "height": 120,
        "itemHeight": 32,
        "itemPaddingX": 12,
        "itemPaddingY": 8,
        "paddingY": 4,
        "width": 280,
      },
      "hasDescription": false,
      "hasError": false,
      "hasLabel": false,
      "opacity": undefined,
      "open": true,
      "ringVariable": "color-active",
      "state": "focus",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "default",
    },
    {
      "dropdown": {
        "borderRadius": 8,
        "height": 120,
        "itemHeight": 32,
        "itemPaddingX": 12,
        "itemPaddingY": 8,
        "paddingY": 4,
        "width": 280,
      },
      "hasDescription": false,
      "hasError": false,
      "hasLabel": false,
      "opacity": 0.5,
      "open": true,
      "ringVariable": "color-border",
      "state": "disabled",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "default",
    },
    {
      "dropdown": null,
      "hasDescription": true,
      "hasError": false,
      "hasLabel": true,
      "opacity": undefined,
      "open": false,
      "ringVariable": "color-border",
      "state": "default",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withLabel",
    },
    {
      "dropdown": null,
      "hasDescription": true,
      "hasError": false,
      "hasLabel": true,
      "opacity": undefined,
      "open": false,
      "ringVariable": "color-active",
      "state": "focus",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withLabel",
    },
    {
      "dropdown": null,
      "hasDescription": true,
      "hasError": false,
      "hasLabel": true,
      "opacity": 0.5,
      "open": false,
      "ringVariable": "color-border",
      "state": "disabled",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withLabel",
    },
    {
      "dropdown": {
        "borderRadius": 8,
        "height": 120,
        "itemHeight": 32,
        "itemPaddingX": 12,
        "itemPaddingY": 8,
        "paddingY": 4,
        "width": 280,
      },
      "hasDescription": true,
      "hasError": false,
      "hasLabel": true,
      "opacity": undefined,
      "open": true,
      "ringVariable": "color-border",
      "state": "default",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withLabel",
    },
    {
      "dropdown": {
        "borderRadius": 8,
        "height": 120,
        "itemHeight": 32,
        "itemPaddingX": 12,
        "itemPaddingY": 8,
        "paddingY": 4,
        "width": 280,
      },
      "hasDescription": true,
      "hasError": false,
      "hasLabel": true,
      "opacity": undefined,
      "open": true,
      "ringVariable": "color-active",
      "state": "focus",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withLabel",
    },
    {
      "dropdown": {
        "borderRadius": 8,
        "height": 120,
        "itemHeight": 32,
        "itemPaddingX": 12,
        "itemPaddingY": 8,
        "paddingY": 4,
        "width": 280,
      },
      "hasDescription": true,
      "hasError": false,
      "hasLabel": true,
      "opacity": 0.5,
      "open": true,
      "ringVariable": "color-border",
      "state": "disabled",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withLabel",
    },
    {
      "dropdown": null,
      "hasDescription": false,
      "hasError": true,
      "hasLabel": true,
      "opacity": undefined,
      "open": false,
      "ringVariable": "color-error",
      "state": "default",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withError",
    },
    {
      "dropdown": null,
      "hasDescription": false,
      "hasError": true,
      "hasLabel": true,
      "opacity": undefined,
      "open": false,
      "ringVariable": "color-error",
      "state": "focus",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withError",
    },
    {
      "dropdown": null,
      "hasDescription": false,
      "hasError": true,
      "hasLabel": true,
      "opacity": 0.5,
      "open": false,
      "ringVariable": "color-error",
      "state": "disabled",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withError",
    },
    {
      "dropdown": {
        "borderRadius": 8,
        "height": 120,
        "itemHeight": 32,
        "itemPaddingX": 12,
        "itemPaddingY": 8,
        "paddingY": 4,
        "width": 280,
      },
      "hasDescription": false,
      "hasError": true,
      "hasLabel": true,
      "opacity": undefined,
      "open": true,
      "ringVariable": "color-error",
      "state": "default",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withError",
    },
    {
      "dropdown": {
        "borderRadius": 8,
        "height": 120,
        "itemHeight": 32,
        "itemPaddingX": 12,
        "itemPaddingY": 8,
        "paddingY": 4,
        "width": 280,
      },
      "hasDescription": false,
      "hasError": true,
      "hasLabel": true,
      "opacity": undefined,
      "open": true,
      "ringVariable": "color-error",
      "state": "focus",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withError",
    },
    {
      "dropdown": {
        "borderRadius": 8,
        "height": 120,
        "itemHeight": 32,
        "itemPaddingX": 12,
        "itemPaddingY": 8,
        "paddingY": 4,
        "width": 280,
      },
      "hasDescription": false,
      "hasError": true,
      "hasLabel": true,
      "opacity": 0.5,
      "open": true,
      "ringVariable": "color-error",
      "state": "disabled",
      "trigger": {
        "borderRadius": 8,
        "height": 36,
        "itemSpacing": 8,
        "paddingX": 12,
        "width": 280,
      },
      "variant": "withError",
    },
  ],
}
`;

exports[`Combobox Generator - Snapshot Tests (Intermediate Data) > should produce consistent layout data for default-closed-default 1`] = `
{
  "dropdown": null,
  "hasDescription": false,
  "hasError": false,
  "hasLabel": false,
  "opacity": undefined,
  "open": false,
  "ringVariable": "color-border",
  "state": "default",
  "trigger": {
    "borderRadius": 8,
    "height": 36,
    "itemSpacing": 8,
    "paddingX": 12,
    "width": 280,
  },
  "variant": "default",
}
`;

exports[`Combobox Generator - Snapshot Tests (Intermediate Data) > should produce consistent layout data for default-closed-disabled 1`] = `
{
  "dropdown": null,
  "hasDescription": false,
  "hasError": false,
  "hasLabel": false,
  "opacity": 0.5,
  "open": false,
  "ringVariable": "color-border",
  "state": "disabled",
  "trigger": {
    "borderRadius": 8,
    "height": 36,
    "itemSpacing": 8,
    "paddingX": 12,
    "width": 280,
  },
  "variant": "default",
}
`;

exports[`Combobox Generator - Snapshot Tests (Intermediate Data) > should produce consistent layout data for default-open-default 1`] = `
{
  "dropdown": {
    "borderRadius": 8,
    "height": 120,
    "itemHeight": 32,
    "itemPaddingX": 12,
    "itemPaddingY": 8,
    "paddingY": 4,
    "width": 280,
  },
  "hasDescription": false,
  "hasError": false,
  "hasLabel": false,
  "opacity": undefined,
  "open": true,
  "ringVariable": "color-border",
  "state": "default",
  "trigger": {
    "borderRadius": 8,
    "height": 36,
    "itemSpacing": 8,
    "paddingX": 12,
    "width": 280,
  },
  "variant": "default",
}
`;

exports[`Combobox Generator - Snapshot Tests (Intermediate Data) > should produce consistent layout data for withError-closed-focus 1`] = `
{
  "dropdown": null,
  "hasDescription": false,
  "hasError": true,
  "hasLabel": true,
  "opacity": undefined,
  "open": false,
  "ringVariable": "color-error",
  "state": "focus",
  "trigger": {
    "borderRadius": 8,
    "height": 36,
    "itemSpacing": 8,
    "paddingX": 12,
    "width": 280,
  },
  "variant": "withError",
}
`;

exports[`Combobox Generator - Snapshot Tests (Intermediate Data) > should produce consistent layout data for withLabel-closed-default 1`] = `
{
  "dropdown": null,
  "hasDescription": true,
  "hasError": false,
  "hasLabel": true,
  "opacity": undefined,
  "open": false,
  "ringVariable": "color-border",
  "state": "default",
  "trigger": {
    "borderRadius": 8,
    "height": 36,
    "itemSpacing": 8,
    "paddingX": 12,
    "width": 280,
  },
  "variant": "withLabel",
}
`;

exports[`Combobox Generator - Snapshot Tests (Intermediate Data) > should produce consistent parsed dropdown styles 1`] = `
{
  "parsed": {
    "fillVariable": "color-surface",
    "hasBorder": true,
    "strokeVariable": "color-border",
    "strokeWeight": 1,
  },
  "raw": "bg-surface border border-border",
}
`;

exports[`Combobox Generator - Snapshot Tests (Intermediate Data) > should produce consistent parsed trigger styles 1`] = `
{
  "parsed": {
    "borderRadius": 8,
    "fillVariable": "color-secondary",
    "hasBorder": true,
    "strokeVariable": "color-border",
  },
  "raw": "bg-secondary ring ring-border rounded-lg",
}
`;

exports[`Combobox Generator - Snapshot Tests (Intermediate Data) > should produce consistent variant config 1`] = `
{
  "interactionStates": [
    "default",
    "focus",
    "disabled",
  ],
  "openStates": [
    false,
    true,
  ],
  "stateStyles": {
    "default": {
      "ringVariable": "color-border",
    },
    "disabled": {
      "opacity": 0.5,
      "ringVariable": "color-border",
    },
    "focus": {
      "ringVariable": "color-active",
    },
  },
  "variantConfig": {
    "default": {},
    "withError": {
      "errorMessage": "Please select a plan to continue",
      "label": "Subscription Plan",
      "useErrorRing": true,
    },
    "withLabel": {
      "description": "Select your country of residence",
      "label": "Country",
    },
  },
  "variants": [
    "default",
    "withLabel",
    "withError",
  ],
}
`;
